templates/stack-security-group.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: vpc security groups stack

Parameters:
  Environment:
    Type: String
    Description: prefix tag
    Default: development
  HomeCIDR:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"

Resources:
  # web server group
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue: !Join ['-', [!Ref Environment, vpc]]
      GroupDescription: Web server access.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref HomeCIDR
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref Environment, sg-web]]

  # rds group
  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue: !Join ['-', [!Ref Environment, vpc]]
      GroupDescription: MySQL access via port 3306
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref WebSecurityGroup
      Tags:
        - Key: Name
          Value: !Join ['-', [!Ref Environment, sg-rds]]

Outputs:
  RdsSecurityGroup:
    Value: !Ref RdsSecurityGroup
    Export:
      Name: RdsSecurityGroup
  WebSecurityGroup:
    Value: !Ref WebSecurityGroup
    Export:
      Name: WebSecurityGroup
